--- a/package.json
+++ b/package.json
@@ -10,5 +10,11 @@
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "datatables.net": "^1.13.1",
+        "jquery": "^3.6.3",
+        "sweetalert": "^2.1.2",
+        "sweetalert2": "^11.6.16"
     }
 }
